@@ -140,7 +140,7 @@ distribution. The
 .\" HREF
 \fBpcresample\fP
 .\"
-documentation describes how to run it.
+documentation describes how to compile and run it.
 .P
 A second matching function, \fBpcre_dfa_exec()\fP, which is not
 Perl-compatible, is also provided. This uses a different algorithm for the
@@ -1960,6 +1960,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 26 December 2007
-Copyright (c) 1997-2007 University of Cambridge.
+Last updated: 23 January 2008
+Copyright (c) 1997-2008 University of Cambridge.
 .fi
