@@ -18,10 +18,9 @@ check for further matches of the same regular expression in the same subject
 string. The logic is a little bit tricky because of the possibility of matching
 an empty string. Comments in the code explain what is going on.
 .P
-The demonstration program is automatically built if you use "./configure;make"
-to build PCRE. Otherwise, if PCRE is installed in the standard include and
-library directories for your system, you should be able to compile the
-demonstration program using this command:
+If PCRE is installed in the standard include and library directories for your
+system, you should be able to compile the demonstration program using this
+command:
 .sp
   gcc -o pcredemo pcredemo.c -lpcre
 .sp
@@ -76,6 +75,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 13 June 2007
-Copyright (c) 1997-2007 University of Cambridge.
+Last updated: 23 January 2008
+Copyright (c) 1997-2008 University of Cambridge.
 .fi
